Fix distances and City ward

--- a/2018-candidates/index.html
+++ b/2018-candidates/index.html
@@ -29,7 +29,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "Graves Park",
-      "distance": 4.6
+      "distance": 3.3
     },
     "geometry": {
       "type": "Point",
@@ -45,7 +45,7 @@ geofeatures =
       "type": "home",
       "colour": "#086",
       "representing": "Crookes & Crosspool",
-      "distance": 3.1
+      "distance": 1.5
     },
     "geometry": {
       "type": "Point",
@@ -61,7 +61,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "East Ecclesfield",
-      "distance": 8.6
+      "distance": 5.9
     },
     "geometry": {
       "type": "Point",
@@ -77,7 +77,7 @@ geofeatures =
       "type": "home",
       "colour": "#08d",
       "representing": "Woodhouse",
-      "distance": 8.5
+      "distance": 6.0
     },
     "geometry": {
       "type": "Point",
@@ -93,7 +93,7 @@ geofeatures =
       "type": "home",
       "colour": "#08d",
       "representing": "Nether Edge & Sharrow",
-      "distance": 2.6
+      "distance": 1.5
     },
     "geometry": {
       "type": "Point",
@@ -108,8 +108,24 @@ geofeatures =
     "properties": {
       "type": "home",
       "colour": "#08d",
+      "representing": "City",
+      "distance": 0.9
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        -1.4967204,
+        53.385425
+      ]
+    }
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home",
+      "colour": "#08d",
       "representing": "Hillsborough",
-      "distance": 2.6
+      "distance": 1.2
     },
     "geometry": {
       "type": "Point",
@@ -125,7 +141,7 @@ geofeatures =
       "type": "home",
       "colour": "#08d",
       "representing": "Broomhill & Sharrow Vale",
-      "distance": 1.1
+      "distance": 0.0
     },
     "geometry": {
       "type": "Point",
@@ -141,7 +157,7 @@ geofeatures =
       "type": "home",
       "colour": "#08d",
       "representing": "Shiregreen & Brightside",
-      "distance": 6.6
+      "distance": 5.1
     },
     "geometry": {
       "type": "Point",
@@ -157,7 +173,7 @@ geofeatures =
       "type": "home",
       "colour": "#08d",
       "representing": "Gleadless Valley",
-      "distance": 5.0
+      "distance": 3.1
     },
     "geometry": {
       "type": "Point",
@@ -173,7 +189,7 @@ geofeatures =
       "type": "home",
       "colour": "#fb3",
       "representing": "Manor Castle",
-      "distance": 4.9
+      "distance": 3.0
     },
     "geometry": {
       "type": "Point",
@@ -189,7 +205,7 @@ geofeatures =
       "type": "home",
       "colour": "#08d",
       "representing": "Southey",
-      "distance": 5.2
+      "distance": 3.5
     },
     "geometry": {
       "type": "Point",
@@ -205,7 +221,7 @@ geofeatures =
       "type": "home",
       "colour": "#08d",
       "representing": "Firth Park",
-      "distance": 5.2
+      "distance": 3.9
     },
     "geometry": {
       "type": "Point",
@@ -221,7 +237,7 @@ geofeatures =
       "type": "home",
       "colour": "#08d",
       "representing": "Crookes & Crosspool",
-      "distance": 1.7
+      "distance": 0.2
     },
     "geometry": {
       "type": "Point",
@@ -265,9 +281,25 @@ geofeatures =
     "type": "Feature",
     "properties": {
       "type": "home",
+      "colour": "#fb3",
+      "representing": "City",
+      "distance": 5.5
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        -1.5655519,
+        53.371889
+      ]
+    }
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home",
       "colour": "#d00",
       "representing": "Dore & Totley",
-      "distance": 6.5
+      "distance": 3.3
     },
     "geometry": {
       "type": "Point",
@@ -283,7 +315,7 @@ geofeatures =
       "type": "home",
       "colour": "#08d",
       "representing": "Fulwood",
-      "distance": 3.1
+      "distance": 0.1
     },
     "geometry": {
       "type": "Point",
@@ -314,7 +346,7 @@ geofeatures =
       "type": "home",
       "colour": "#fb3",
       "representing": "Broomhill & Sharrow Vale",
-      "distance": 2.4
+      "distance": 1.1
     },
     "geometry": {
       "type": "Point",
@@ -360,7 +392,7 @@ geofeatures =
       "type": "home",
       "colour": "#08d",
       "representing": "Birley",
-      "distance": 6.0
+      "distance": 4.6
     },
     "geometry": {
       "type": "Point",
@@ -376,7 +408,7 @@ geofeatures =
       "type": "home",
       "colour": "#b09",
       "representing": "Nether Edge & Sharrow",
-      "distance": 1.1
+      "distance": 0.2
     },
     "geometry": {
       "type": "Point",
@@ -392,7 +424,7 @@ geofeatures =
       "type": "home",
       "colour": "#fb3",
       "representing": "Burngreave",
-      "distance": 4.6
+      "distance": 3.3
     },
     "geometry": {
       "type": "Point",
@@ -438,7 +470,7 @@ geofeatures =
       "type": "home",
       "colour": "#08d",
       "representing": "Park & Arbourthorne",
-      "distance": 5.6
+      "distance": 4.3
     },
     "geometry": {
       "type": "Point",
@@ -454,7 +486,7 @@ geofeatures =
       "type": "home",
       "colour": "#fb3",
       "representing": "Richmond",
-      "distance": 8.1
+      "distance": 6.5
     },
     "geometry": {
       "type": "Point",
@@ -470,7 +502,7 @@ geofeatures =
       "type": "home",
       "colour": "#fb3",
       "representing": "Beighton",
-      "distance": 3.7
+      "distance": 1.5
     },
     "geometry": {
       "type": "Point",
@@ -516,7 +548,7 @@ geofeatures =
       "type": "home",
       "colour": "#086",
       "representing": "Beighton",
-      "distance": 4.4
+      "distance": 2.1
     },
     "geometry": {
       "type": "Point",
@@ -532,7 +564,7 @@ geofeatures =
       "type": "home",
       "colour": "#08d",
       "representing": "Mosborough",
-      "distance": 1.8
+      "distance": 0.2
     },
     "geometry": {
       "type": "Point",
@@ -548,7 +580,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "Birley",
-      "distance": 2.1
+      "distance": 0.2
     },
     "geometry": {
       "type": "Point",
@@ -579,7 +611,7 @@ geofeatures =
       "type": "home",
       "colour": "#b09",
       "representing": "East Ecclesfield",
-      "distance": 10.0
+      "distance": 7.7
     },
     "geometry": {
       "type": "Point",
@@ -640,7 +672,7 @@ geofeatures =
       "type": "home",
       "colour": null,
       "representing": "Walkley",
-      "distance": 4.8
+      "distance": 3.3
     },
     "geometry": {
       "type": "Point",
@@ -656,7 +688,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "Fulwood",
-      "distance": 5.2
+      "distance": 2.8
     },
     "geometry": {
       "type": "Point",
@@ -672,7 +704,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "Broomhill & Sharrow Vale",
-      "distance": 6.2
+      "distance": 4.6
     },
     "geometry": {
       "type": "Point",
@@ -688,7 +720,7 @@ geofeatures =
       "type": "home",
       "colour": "#fb3",
       "representing": "Birley",
-      "distance": 9.5
+      "distance": 6.9
     },
     "geometry": {
       "type": "Point",
@@ -734,7 +766,7 @@ geofeatures =
       "type": "home",
       "colour": "#fb3",
       "representing": "Nether Edge & Sharrow",
-      "distance": 5.1
+      "distance": 3.9
     },
     "geometry": {
       "type": "Point",
@@ -780,7 +812,7 @@ geofeatures =
       "type": "home",
       "colour": "#086",
       "representing": "Park & Arbourthorne",
-      "distance": 1.4
+      "distance": 0.1
     },
     "geometry": {
       "type": "Point",
@@ -796,7 +828,7 @@ geofeatures =
       "type": "home",
       "colour": "#fb3",
       "representing": "Graves Park",
-      "distance": 3.5
+      "distance": 2.2
     },
     "geometry": {
       "type": "Point",
@@ -827,7 +859,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "Beighton",
-      "distance": 2.0
+      "distance": 1.0
     },
     "geometry": {
       "type": "Point",
@@ -918,7 +950,7 @@ geofeatures =
       "type": "home",
       "colour": "#08d",
       "representing": "Manor Castle",
-      "distance": 3.3
+      "distance": 1.5
     },
     "geometry": {
       "type": "Point",
@@ -947,9 +979,24 @@ geofeatures =
     "type": "Feature",
     "properties": {
       "type": "home",
+      "colour": "#086",
+      "representing": "City"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        -1.4671138,
+        53.388083
+      ]
+    }
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home",
       "colour": "#d00",
       "representing": "Manor Castle",
-      "distance": 3.7
+      "distance": 1.9
     },
     "geometry": {
       "type": "Point",
@@ -995,7 +1042,7 @@ geofeatures =
       "type": "home",
       "colour": "#b09",
       "representing": "Hillsborough",
-      "distance": 4.0
+      "distance": 1.9
     },
     "geometry": {
       "type": "Point",
@@ -1011,7 +1058,7 @@ geofeatures =
       "type": "home",
       "colour": "#086",
       "representing": "West Ecclesfield",
-      "distance": 3.6
+      "distance": 1.3
     },
     "geometry": {
       "type": "Point",
@@ -1102,7 +1149,7 @@ geofeatures =
       "type": "home",
       "colour": "#b09",
       "representing": "Shiregreen & Brightside",
-      "distance": 5.7
+      "distance": 3.7
     },
     "geometry": {
       "type": "Point",
@@ -1118,7 +1165,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "West Ecclesfield",
-      "distance": 2.2
+      "distance": 0.1
     },
     "geometry": {
       "type": "Point",
@@ -1164,7 +1211,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "Shiregreen & Brightside",
-      "distance": 3.7
+      "distance": 1.9
     },
     "geometry": {
       "type": "Point",
@@ -1180,7 +1227,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "Crookes & Crosspool",
-      "distance": 7.6
+      "distance": 6.3
     },
     "geometry": {
       "type": "Point",
@@ -1241,7 +1288,7 @@ geofeatures =
       "type": "home",
       "colour": "#b09",
       "representing": "Beighton",
-      "distance": 20.5
+      "distance": 18.5
     },
     "geometry": {
       "type": "Point",
@@ -1287,7 +1334,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "Stannington",
-      "distance": 11.2
+      "distance": 4.5
     },
     "geometry": {
       "type": "Point",
@@ -1303,7 +1350,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "Firth Park",
-      "distance": 1.7
+      "distance": 0.9
     },
     "geometry": {
       "type": "Point",
@@ -1319,7 +1366,7 @@ geofeatures =
       "type": "home",
       "colour": "#b09",
       "representing": "Southey",
-      "distance": 2.3
+      "distance": 0.8
     },
     "geometry": {
       "type": "Point",
@@ -1335,7 +1382,7 @@ geofeatures =
       "type": "home",
       "colour": "#fb3",
       "representing": "Woodhouse",
-      "distance": 8.7
+      "distance": 6.2
     },
     "geometry": {
       "type": "Point",
@@ -1366,7 +1413,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "Richmond",
-      "distance": 9.2
+      "distance": 8.0
     },
     "geometry": {
       "type": "Point",
@@ -1412,7 +1459,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "Stocksbridge & Upper Don",
-      "distance": 13.2
+      "distance": 3.9
     },
     "geometry": {
       "type": "Point",
@@ -1443,7 +1490,7 @@ geofeatures =
       "type": "home",
       "colour": "#08d",
       "representing": "Richmond",
-      "distance": 6.5
+      "distance": 5.1
     },
     "geometry": {
       "type": "Point",
@@ -1504,7 +1551,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "Southey",
-      "distance": 3.8
+      "distance": 2.2
     },
     "geometry": {
       "type": "Point",
@@ -1520,7 +1567,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "Nether Edge & Sharrow",
-      "distance": 3.6
+      "distance": 2.6
     },
     "geometry": {
       "type": "Point",
@@ -1536,7 +1583,7 @@ geofeatures =
       "type": "home",
       "colour": "#fb3",
       "representing": "Hillsborough",
-      "distance": 1.7
+      "distance": 0.8
     },
     "geometry": {
       "type": "Point",
@@ -1552,7 +1599,7 @@ geofeatures =
       "type": "home",
       "colour": "#fb3",
       "representing": "Southey",
-      "distance": 2.5
+      "distance": 1.5
     },
     "geometry": {
       "type": "Point",
@@ -1568,7 +1615,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "Burngreave",
-      "distance": 4.2
+      "distance": 2.2
     },
     "geometry": {
       "type": "Point",
@@ -1599,7 +1646,7 @@ geofeatures =
       "type": "home",
       "colour": "#fb3",
       "representing": "Shiregreen & Brightside",
-      "distance": 6.3
+      "distance": 5.0
     },
     "geometry": {
       "type": "Point",
@@ -1615,7 +1662,7 @@ geofeatures =
       "type": "home",
       "colour": null,
       "representing": "Southey",
-      "distance": 3.8
+      "distance": 2.5
     },
     "geometry": {
       "type": "Point",
@@ -1646,7 +1693,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "Park & Arbourthorne",
-      "distance": 7.7
+      "distance": 5.8
     },
     "geometry": {
       "type": "Point",
@@ -1662,7 +1709,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "Hillsborough",
-      "distance": 2.1
+      "distance": 0.5
     },
     "geometry": {
       "type": "Point",
@@ -1678,7 +1725,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "Gleadless Valley",
-      "distance": 2.3
+      "distance": 0.6
     },
     "geometry": {
       "type": "Point",
@@ -1694,7 +1741,7 @@ geofeatures =
       "type": "home",
       "colour": "#086",
       "representing": "Shiregreen & Brightside",
-      "distance": 7.3
+      "distance": 5.4
     },
     "geometry": {
       "type": "Point",
@@ -1710,7 +1757,7 @@ geofeatures =
       "type": "home",
       "colour": "#fb3",
       "representing": "Crookes & Crosspool",
-      "distance": 3.2
+      "distance": 2.3
     },
     "geometry": {
       "type": "Point",
@@ -1741,7 +1788,7 @@ geofeatures =
       "type": "home",
       "colour": null,
       "representing": "Hillsborough",
-      "distance": 6.0
+      "distance": 4.0
     },
     "geometry": {
       "type": "Point",
@@ -1757,7 +1804,7 @@ geofeatures =
       "type": "home",
       "colour": "#fb3",
       "representing": "Firth Park",
-      "distance": 8.3
+      "distance": 7.2
     },
     "geometry": {
       "type": "Point",
@@ -1773,7 +1820,7 @@ geofeatures =
       "type": "home",
       "colour": "#d00",
       "representing": "Beauchief & Greenhill",
-      "distance": 2.2
+      "distance": 0.5
     },
     "geometry": {
       "type": "Point",
@@ -1789,7 +1836,7 @@ geofeatures =
       "type": "home",
       "colour": "#fb3",
       "representing": "Darnall",
-      "distance": 7.4
+      "distance": 4.6
     },
     "geometry": {
       "type": "Point",
@@ -1805,7 +1852,7 @@ geofeatures =
       "type": "home",
       "colour": "#08d",
       "representing": "Graves Park",
-      "distance": 2.2
+      "distance": 1.1
     },
     "geometry": {
       "type": "Point",
@@ -1821,7 +1868,7 @@ geofeatures =
       "type": "home",
       "colour": "#fb3",
       "representing": "Park & Arbourthorne",
-      "distance": 5.2
+      "distance": 4.3
     },
     "geometry": {
       "type": "Point",
@@ -1852,7 +1899,7 @@ geofeatures =
       "type": "home",
       "colour": "#eee",
       "representing": "Birley",
-      "distance": 6.0
+      "distance": 3.4
     },
     "geometry": {
       "type": "Point",
@@ -1896,6 +1943,22 @@ geofeatures =
     "type": "Feature",
     "properties": {
       "type": "home",
+      "colour": "#d00",
+      "representing": "City",
+      "distance": 2.4
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        -1.4656847,
+        53.343673
+      ]
+    }
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home",
       "colour": null,
       "representing": "Graves Park"
     },
@@ -1913,7 +1976,7 @@ geofeatures =
       "type": "home",
       "colour": "#086",
       "representing": "Mosborough",
-      "distance": 7.7
+      "distance": 5.6
     },
     "geometry": {
       "type": "Point",
@@ -1959,7 +2022,7 @@ geofeatures =
       "type": "home",
       "colour": "#fb3",
       "representing": "Beauchief & Greenhill",
-      "distance": 3.4
+      "distance": 2.0
     },
     "geometry": {
       "type": "Point",
@@ -1990,7 +2053,7 @@ geofeatures =
       "type": "home",
       "colour": "#08d",
       "representing": "West Ecclesfield",
-      "distance": 6.6
+      "distance": 4.6
     },
     "geometry": {
       "type": "Point",
@@ -2006,7 +2069,7 @@ geofeatures =
       "type": "home",
       "colour": "#fb3",
       "representing": "Ecclesall",
-      "distance": 10.3
+      "distance": 8.6
     },
     "geometry": {
       "type": "Point",
@@ -2128,6 +2191,20 @@ geofeatures =
       "coordinates": [
         -1.4866458473666675,
         53.36233359505128
+      ]
+    }
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "ward",
+      "name": "City"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        -1.4699073342496356,
+        53.380305167996994
       ]
     }
   },
